--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@ body::before {
   <!-- Header -->
   <header>
     <div class="container nav">
-      <a href="#"><img src="images/cupcrunch logo.png" alt="CupCrunch Logo" class="site-logo"></a>
+      <a href="#"><img src="images/WhatsApp Image 2025-04-16 at 22.02.41_b548f51d.jpg" alt="dharvik Logo" class="site-logo"></a>
       <nav>
         <ul>
           <li><a href="#about">About</a></li>
