--- a/index.html
+++ b/index.html
@@ -354,6 +354,7 @@ body::before {
   <!-- Hero Section -->
   <section class="hero" id="about">
     <div class="container">
+<h1>DHARVIKCRAFTHUB</h1>
       <h1>Art of soul</h1>
       <p>Enjoy your beverage in a 100% edible, eco-friendly cup.<br>
       The future of sustainable sipping starts here!</p>
