--- a/index.html
+++ b/index.html
@@ -354,8 +354,8 @@ body::before {
   <!-- Hero Section -->
   <section class="hero" id="about">
     <div class="container">
-      <h1>DHARVIK CRAFT HUB
-        Art of soul</h1>
+      <h1>DHARVIK CRAFT HUB</h1>
+        <h1>Art of soul</h1>
       <p>Enjoy your beverage in a 100% edible, eco-friendly cup.<br>
       The future of sustainable sipping starts here!</p>
       <a href="#product"><button class="cta-btn">Order Now</button></a>
